<resources>
    <string name="app_name">Zolo!</string>
    <string name="txt_titlelogin">Đăng nhập ứng dụng</string>
    <string name="txt_email">Email</string>
    <string name="txt_email1">Email (@gmail.com)</string>
    <string name="txt_matkhau">Mật khẩu</string>
    <string name="txt_matkhau1">Mật khẩu (6 chữ số)</string>
    <string name="but_login">Đăng nhập</string>
    <string name="but_register">Tạo tài khoản mới</string>
    <string name="txt_or">hoặc</string>
    <string name="txt_username">Họ và tên</string>
    <string name="txt_confirmpass">Xác nhận mật khẩu</string>
    <string name="txt_address">Địa chỉ</string>
    <string name="txt_sdt">Số điện thoại</string>
    <string name="txt_birthday">Ngày sinh</string>
    <string name="txt_username2">Họ và tên:</string>
    <string name="txt_mota">Mô tả:</string>
    <string name="txt_address2">Địa chỉ:</string>
    <string name="txt_sdt2">Số điện thoại:</string>
    <string name="txt_birthday2">Ngày sinh:</string>
    <string name="txt_titleregister">Đăng kí tài khoản</string>
    <string name="txt_ketnoimang">Mất kết nối máy chủ!</string>
    <string name="txt_ketnoimang_xemlai">Mất kết nối. Vui lòng kiểm tra lại Internet!</string>
    <string name="txt_messagehaynhapdu">Hãy nhập đủ thông tin!</string>
    <string name="txt_loginsuccess">Đăng nhập thành công!</string>
    <string name="txt_loginfail">Tài khoản hoặc mật khẩu không đúng!</string>
    <string name="txt_messagevalid">Email không đúng hoặc mật khẩu đang dưới 6 kí tự</string>
    <string name="txt_messagexacnhanpass">Xác nhận mật khẩu không đúng!</string>
    <string name="txt_emailexist">Email đã tồn tại</string>
    <string name="txt_registersuccess">Đăng ký thành công!</string>
    <string name="txt_home">Bảng tin</string>
    <string name="txt_friend_request">Lời mời</string>
    <string name="txt_notification">Thông báo</string>
    <string name="txt_profile">Cá nhân</string>
    <string name="edt_search">Tìm kiếm bạn bè</string>
    <string name="edt_your_think">Bạn đang nghĩ gì?</string>
    <string name="but_dongy">Đồng ý</string>
    <string name="but_xoa">Xoá</string>
    <string name="txt_loi_moi_ket_ban">Lời mời kết bạn:</string>
    <string name="but_ket_ban">Kết bạn</string>
    <string name="but_dang_gui_ket_ban">Đã gửi yêu cầu</string>
    <string name="but_ban_be">Bạn bè</string>
    <string name="txt_da_thanh_ban_be">Hai bạn đã trở thành bạn bè!</string>
    <string name="txt_tao_bai_dang">Tạo bài đăng</string>
    <string name="txt_sua_bai_dang">Sửa bài đăng</string>
    <string name="but_dang_bai">Đăng bài</string>
    <string name="but_sua_bai">Sửa bài</string>
    <string name="txt_chua_ghi_noi_dung">Chưa có nội dung bài đăng!</string>
    <string name="txt_dang_bai_thanh_cong">Đăng bài thành công!</string>
    <string name="txt_sua_bai_thanh_cong">Sửa bài thành công!</string>
    <string name="txt_please_wait">Lag quá, chờ chút nhé..! :(</string>
    <string name="txt_ket_noi_mang_yeu">Kết nối mạng yếu</string>
    <string name="txt_binh_luan">Bình luận</string>
    <string name="txt_chua_nhap_binh_luan">Nhập bình luận!</string>
    <string name="txt_da_xoa_binh_luan">Đã xoá bình luận</string>
    <string name="txt_thong_bao">Thông báo!</string>
    <string name="txt_xoa_status">Bạn muốn xoá bài viết này?</string>
    <string name="txt_an_status">Bạn muốn ẩn bài viết này?</string>
    <string name="txt_co">Có</string>
    <string name="txt_ko">Không</string>
    <string name="txt_thong_tin">Thông tin</string>
    <string name="but_sua_thong_tin">Sửa thông tin</string>
    <string name="but_dang_xuat">Đăng xuất</string>
    <string name="txt_sua_thong_tin">Sửa thông tin</string>
    <string name="but_xac_nhan_sua">Sửa</string>
    <string name="txt_da_thich">Đã thích bài viết của bạn.</string>
    <string name="txt_da_binh_luan">Đã bình luận bài viết của bạn.</string>
    <string name="txt_thong_bao_cua_ban">Thông báo của bạn</string>
    <string name="txt_bai_viet">Bài viết</string>
    <string name="txt_trang_ca_nhan">Trang thông tin</string>
    <string name="txt_muon_huy_ket_ban">Bạn muốn huỷ bạn bè?</string>
    <string name="txt_da_huy_ban_be">Đã huỷ bạn bè!</string>
    <string name="txt_bang_tin_trong">Bảng tin trống</string>
    <string name="txt_loi_moi_trong">Không có lời mời</string>
    <string name="txt_thong_bao_trong">Không có thông báo</string>
</resources>