<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/txt_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/requestFragment"
        android:icon="@drawable/icon_request_friend"
        android:title="@string/txt_friend_request"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/txt_notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/txt_profile"
        app:showAsAction="ifRoom" />
</menu>