<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.FixProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/but_back_fix_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@+id/but_back_fix_profile"
                    android:text="@string/txt_sua_thong_tin"
                    android:textColor="#505050"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/but_sua_fix_pofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/custom_but_dong_y"
                    android:text="@string/but_xac_nhan_sua" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_anh_bia_fix_profile"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_1" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avt_user_fix_profile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignBottom="@+id/img_anh_bia_fix_profile"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/default_avatar" />

            <EditText
                android:id="@+id/edt_ten_fix_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_anh_bia_fix_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edt"
                android:hint="@string/txt_username2"
                android:textColor="#505050" />

            <EditText
                android:id="@+id/edt_mo_ta_fix_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_ten_fix_profile"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edt"
                android:hint="@string/txt_mota"
                android:textColor="#505050" />

            <EditText
                android:id="@+id/edt_dia_chi_fix_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_mo_ta_fix_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edt"
                android:hint="@string/txt_address2"
                android:textColor="#505050" />

            <EditText
                android:id="@+id/edt_ngay_sinh_fix_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_dia_chi_fix_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edt"
                android:hint="@string/txt_birthday2"
                android:textColor="#505050" />

            <EditText
                android:id="@+id/edt_sdt_fix_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_ngay_sinh_fix_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edt"
                android:hint="@string/txt_sdt2"
                android:inputType="number"
                android:textColor="#505050" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>