<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlt_layout_item_friend_request"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avt_item_friend_request"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/txt_ten_user_send_item_friend_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@+id/img_avt_item_friend_request"
        android:text="@string/app_name"
        android:textColor="#505050"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_ngay_send_friend_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="05-12-2022"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_ten_user_send_item_friend_request"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/img_avt_item_friend_request"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_dong_y_item_friend_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_but_dong_y"
            android:text="@string/but_dongy"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but_xoa_item_friend_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_but_xoa"
            android:text="@string/but_xoa"
            android:textAllCaps="false"
            android:textColor="#505050"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>