<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_profile_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_anh_bia_profile_frag"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img_1" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avt_user_profile_frag"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignBottom="@+id/img_anh_bia_profile_frag"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/default_avatar" />

            <TextView
                android:id="@+id/txt_ten_user_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_anh_bia_profile_frag"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="#505050"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_split_profile"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@+id/txt_ten_user_profile_frag"
                android:layout_marginTop="10dp"
                android:background="#ACACAA" />

            <TextView
                android:id="@+id/txt_thong_tin_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_split_profile"
                android:layout_marginStart="10dp"
                android:text="@string/txt_thong_tin"
                android:textColor="#505050"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_mo_ta_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_thong_tin_profile_frag"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_mo_ta" />

            <TextView
                android:id="@+id/txt_string_mo_ta_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_thong_tin_profile_frag"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/img_mo_ta_profile_frag"
                android:text="@string/txt_mota"
                android:textColor="#505050"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_mo_ta_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_thong_tin_profile_frag"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/txt_string_mo_ta_profile_frag"
                android:text="@string/app_name"
                android:textColor="#505050"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_que_quan_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_mo_ta_profile_frag"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_address" />

            <TextView
                android:id="@+id/txt_string_address_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_mo_ta_profile_frag"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/img_que_quan_profile_frag"
                android:text="@string/txt_address2"
                android:textColor="#505050"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_address_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_mo_ta_profile_frag"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/txt_string_address_profile_frag"
                android:text="@string/app_name"
                android:textColor="#505050"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_birthday_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_que_quan_profile_frag"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_birthday" />

            <TextView
                android:id="@+id/txt_string_birthday_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_que_quan_profile_frag"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/img_birthday_profile_frag"
                android:text="@string/txt_birthday2"
                android:textColor="#505050"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_birthday_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_que_quan_profile_frag"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/txt_string_birthday_profile_frag"
                android:text="@string/app_name"
                android:textColor="#505050"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_phone_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_birthday_profile_frag"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_iphone" />

            <TextView
                android:id="@+id/txt_string_phone_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_birthday_profile_frag"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/img_phone_profile_frag"
                android:text="@string/txt_sdt2"
                android:textColor="#505050"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_phone_profile_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_birthday_profile_frag"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/txt_string_phone_profile_frag"
                android:text="@string/app_name"
                android:textColor="#505050"
                android:textSize="16sp" />

            <Button
                android:id="@+id/but_sua_thong_tin_profile_frag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_phone_profile_frag"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_but_them_ban_be"
                android:text="@string/but_sua_thong_tin"
                android:textColor="#fff" />

            <Button
                android:id="@+id/but_dang_xuat_profile_frag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/but_sua_thong_tin_profile_frag"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_but_xoa"
                android:text="@string/but_dang_xuat"
                android:textColor="#505050" />

            <ImageView
                android:id="@+id/img_split2_profile"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@+id/but_dang_xuat_profile_frag"
                android:layout_marginTop="10dp"
                android:background="#ACACAA" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_bang_tin_profile_frag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_split2_profile"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>